cargo-features = ["per-package-target"]

[unstable]
per-package-target = true

[package]
name = "gfx_test"
version = "0.1.0"
edition = "2018"
forced-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
